deploy/jenkins/new-cce-master/deployment.yaml
---
# Source: jenkins/templates/jenkins-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengauss-jenkins
  namespace: jenkins
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-1.7.4"
    "app.kubernetes.io/managed-by": "Tiller"
    "app.kubernetes.io/instance": "jenkins"
    "app.kubernetes.io/component": "jenkins-master"
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.copy-default-config: semver:~1.0
    flux.weave.works/tag.jenkins: semver:~1.0
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      "app.kubernetes.io/component": "jenkins-master"
      "app.kubernetes.io/instance": "jenkins"
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": 'jenkins'
        "helm.sh/chart": "jenkins-1.7.4"
        "app.kubernetes.io/managed-by": "Tiller"
        "app.kubernetes.io/instance": "jenkins"
        "app.kubernetes.io/component": "jenkins-master"
      annotations:
        checksum/config: 9082d5fc978a4463dfc767a49f21b1ebe45d1767849c41939a18e1baab59f923
    spec:
      nodeSelector:
        master_node: "true"
      securityContext:
        runAsUser: 0
      serviceAccountName: "opengauss-jenkins"
      containers:
      - name: jenkins
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/jenkins:lts20221101-2.3321
        imagePullPolicy: "Always"
        args: ["--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)", "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: slavelistener
        livenessProbe:
          httpGet:
            path: "/login"
            port: http
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: "/login"
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            cpu: 15000m
            memory: 55000Mi
          requests:
            cpu: 8000m
            memory: 16000Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/jenkins_home
          name: jenkins-home
          readOnly: false
        - mountPath: /var/jenkins_config
          name: jenkins-config
          readOnly: true
        - mountPath: /usr/share/jenkins/ref/secrets/
          name: secrets-dir
          readOnly: false
        - mountPath: /usr/share/jenkins/ref/plugins/
          name: plugin-dir
          readOnly: false
      volumes:
      - name: plugins
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: jenkins-config
        configMap:
          name: opengauss-jenkins
      - name: secrets-dir
        emptyDir: {}
      - name: plugin-dir
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-data-vol
      - name: secret-volume
        secret:
          secretName: websecret
      - name: configmap-volume
        configMap:
          name: webconfigmap
