deploy/jenkins/new-cce-master/agentservice.yaml
---
# Source: jenkins/templates/jenkins-agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengauss-jenkins-agent
  namespace: jenkins
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-1.7.4"
    "app.kubernetes.io/managed-by": "Tiller"
    "app.kubernetes.io/instance": "jenkins"
    "app.kubernetes.io/component": "jenkins-master"
spec:
  ports:
    - port: 50000
      targetPort: 50000 
      name: slavelistener
  selector:
    "app.kubernetes.io/component": "jenkins-master"
    "app.kubernetes.io/instance": "jenkins"
  type: ClusterIP
